Add gradle-mps-runner to configure Gradle for running MPS
Will probably publish it to a repository in the future, for use by
Gradle plugins that run the backends.