@@ -1,4 +1,3 @@
-import org.gradle.kotlin.dsl.support.serviceOf
 import java.nio.file.Files
 
 buildscript {
@@ -10,6 +9,7 @@ buildscript {
 plugins {
     base
     id("base-conventions")
+    id("de.itemis.mps.gradle.mpsrunner.run-mps")
 }
 
 val executeGenerators by configurations.creating
@@ -151,64 +151,6 @@ data class ModelCheckTest(val name: String, val project: String, val args: List<
     val projectDir = file("projects/$project")
 }
 
-fun configureJavaForMpsVersion(javaExec: JavaExec, mpsHome: File, mpsVersion: String) {
-    val launcher = serviceOf<JavaToolchainService>().launcherFor {
-        vendor.set(JvmVendorSpec.matching("JetBrains"))
-        languageVersion.set(JavaLanguageVersion.of(if (mpsVersion < "2022") 11 else 17))
-    }
-    javaExec.javaLauncher.set(launcher)
-
-    if (mpsVersion >= "2022.3") {
-        javaExec.systemProperty("jna.boot.library.path", mpsHome.resolve("lib/jna/${System.getProperty("os.arch")}"))
-    }
-
-    if (mpsVersion >= "2022") {
-        val modules = listOf(
-            "java.base/java.io",
-            "java.base/java.lang",
-            "java.base/java.lang.reflect",
-            "java.base/java.net",
-            "java.base/java.nio",
-            "java.base/java.nio.charset",
-            "java.base/java.text",
-            "java.base/java.time",
-            "java.base/java.util",
-            "java.base/java.util.concurrent",
-            "java.base/java.util.concurrent.atomic",
-            "java.base/jdk.internal.vm",
-            "java.base/sun.nio.ch",
-            "java.base/sun.nio.fs",
-            "java.base/sun.security.ssl",
-            "java.base/sun.security.util",
-            "java.desktop/java.awt",
-            "java.desktop/java.awt.dnd.peer",
-            "java.desktop/java.awt.event",
-            "java.desktop/java.awt.image",
-            "java.desktop/java.awt.peer",
-            "java.desktop/javax.swing",
-            "java.desktop/javax.swing.plaf.basic",
-            "java.desktop/javax.swing.text.html",
-            "java.desktop/sun.awt.datatransfer",
-            "java.desktop/sun.awt.image",
-            "java.desktop/sun.awt",
-            "java.desktop/sun.font",
-            "java.desktop/sun.java2d",
-            "java.desktop/sun.swing",
-            "jdk.attach/sun.tools.attach",
-            "jdk.compiler/com.sun.tools.javac.api",
-            "jdk.internal.jvmstat/sun.jvmstat.monitor",
-            "jdk.jdi/com.sun.tools.jdi",
-            "java.desktop/sun.lwawt",
-            "java.desktop/sun.lwawt.macosx",
-            "java.desktop/com.apple.laf",
-            "java.desktop/com.apple.eawt",
-            "java.desktop/com.apple.eawt.event"
-        )
-
-        javaExec.jvmArgs(modules.map { "--add-opens=$it=ALL-UNNAMED" })
-    }
-}
-
 /**
  * Creates and returns the Gradle tasks to perform all the tests with a single MPS version.
  * Also creates any necessary Gradle objects (configurations, dependencies, etc.)
@@ -271,7 +213,7 @@ fun tasksForMpsVersion(mpsVersion: String): List<TaskProvider<out Task>> {
                 }
             }
 
-            configureJavaForMpsVersion(this, mpsHome, mpsVersion)
+            mpsRunner.configureJavaForMpsVersion(this, mpsHome, mpsVersion)
         }
     }
 
@@ -309,11 +251,12 @@ fun tasksForMpsVersion(mpsVersion: String): List<TaskProvider<out Task>> {
                 if (actualSuccess != testCase.expectSuccess) {
                     throw GradleException(
                         "Modelcheck outcome: expected success: ${testCase.expectSuccess}, but was: $actualSuccess" +
-                                " (actual exit value $actualExitValue)")
+                                " (actual exit value $actualExitValue)"
+                    )
                 }
             }
 
-            configureJavaForMpsVersion(this, mpsHome, mpsVersion)
+            mpsRunner.configureJavaForMpsVersion(this, mpsHome, mpsVersion)
         }
     }
 
